--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Gelato Formulator",
-  "short_name": "Gelato",
-  "description": "Professional gelato and sorbet formulation calculator",
+  "name": "Shot Tracker",
+  "short_name": "Shots",
+  "description": "Track your peptide doses and schedules",
   "start_url": "./index.html",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#1e3a5f",
-  "theme_color": "#1e3a5f",
+  "background_color": "#0B1120",
+  "theme_color": "#0B1120",
   "orientation": "portrait",
   "icons": [
     {
