--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "Professional gelato formulation calculator",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#1a1a2e",
-  "theme_color": "#1a1a2e",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a",
   "orientation": "portrait-primary",
   "icons": [
     {
